.. Author notes: this file is formatted with restructured text
  (http://docutils.sourceforge.net/docs/user/rst/quickstart.html)
  as it is included in Finagle's user's guide.

6.x
-----

6.23.0
~~~~~~

Breaking API Changes
--------------------

  * finagle-core: `c.t.f.Stackable`s maintained state about which parameters were
    accessed via `get`. This was error prone and violated the assumption that `Stack`s
    are immutable data structures. We removed this in favor of annotating modules with
    parameters. The abstract classes for Stackables were also simplified. Now we only have
    `Module` and `ModuleN` variants which are more convenient for most definitions.
    Since this is an advanced API, it should not impact standard usage of finagle.
  * finagle-core: Update ConcurrentRingBuffer to use ClassTag instead of ClassManifest;
    rename size argument to capacity.

Deprecations
------------

  * `ServerBuilder.stack[Req1, Rep1](mk: Stack.Params => Server[Req1, Rep1])` is
    deprecated in favor of
    `ServerBuilder.stack[Req1, Rep1](server: Stack.Parameterized[Server[Req1, Rep1]])`

6.22.0
~~~~~~

Breaking API Changes
--------------------

  * finagle-core: Removed unused `com.twitter.finagle.service.ProxyService`. It wasn't
    sufficiently general to be used outside of finagle, and was no longer used
    in finagle.

New Features
------------

  * finagle-core: BroadcastStatsReceiver, introduce specialized implementation
  * finagle-core: Introduce gauges in SummarizingStatsReceiver
  * finagle-core: Introduce Transport#copyToWriter
  * finagle-core: Make base Dtab used in BindingFactory a Stack.Param
  * finagle-core: Proper decay in experimental ewma load metric
  * finagle-core: Simplify Stack{Client, Server} and unify around them


Runtime Behavior Changes
------------------------

  * finagle-core: Add support for non-URLClassloaders to LoadService
  * finagle-core: clear locals before entering server dispatch loop