@@ -1,0 +1,13 @@
+FailureAccrual
+<<<<<<<<<<<<<<<
+
+**removals**
+  a count of how many times any host has been removed due to failure
+  accrual.  Note that there is no specificity on which host in the
+  cluster has been removed, so a high value here could be one
+  problem-child or aggregate problems across all hosts.
+
+**revivals**
+  a count of how many times a previously-removed host has been
+  reactivated after the penalty period has elapsed.
+
